# kody

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.atl/: skill-registry.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/ai/: mod.rs  offline.rs  openai.rs
src/ascii/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/db/: history.rs  methods.rs  mod.rs  schema.rs  tokens.rs  vulns.rs
src/network/: discovery.rs  mod.rs
src/scanner/: auto_scan.rs  banner.rs  cve_db.rs  hidden_map.rs  ip_scan.rs  mod.rs  ports.rs  vuln_rules.rs  web.rs
tests/: infrastructure.rs
