[package]
name = "kody"
version = "0.1.0"
edition = "2021"
description = "CLI vulnerability scanner with AI integration"
authors = ["kody team"]
license = "MIT"

[[bin]]
name = "kody"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Network
reqwest = { version = "0.11", features = ["json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Output
indicatif = "0.17"

# Utils
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true